--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <header>
+      <div class="container">
       <a class="logo" href="./index.html">
         Web<span class="logo-web">Studio</span></a
       >
@@ -38,8 +39,10 @@
           <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
     </header>
     <main>
+      <div class="container">
       <!--Title-->
       <section>
         <h1 class="title-service">Эффективные решения для вашего бизнеса</h1>
@@ -125,8 +128,10 @@
           </li>
         </ul>
       </section>
+    </div>
     </main>
     <footer class="footer">
+      <div class="container">
       <!-- Контакты -->
       <a class="logo" href="./index.html">
         Web<span class="logo-web-footer">Studio</span></a
@@ -142,6 +147,7 @@
           <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
     </footer>
   </body>
 </html>
