--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="header-nav">
           <ul class="list nav-list">
             <li class="nav-list-item">
-              <a class="nav-link" href="./index.html">Студия</a>
+              <a class="nav-link current" href="./index.html">Студия</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="./portfolio.html">Портфолио</a>
@@ -51,7 +51,7 @@
     </header>
     <main>
       <!--Title-->
-      <section class="section service-section">
+      <section class="service-section">
         <div class="container service-wrapper">
           <h1 class="title-service">Эффективные решения для вашего бизнеса</h1>
           <button class="btn-service" type="button">Заказать услугу</button>
@@ -61,28 +61,28 @@
       <section class="section">
         <div class="container quaility-wrapper">
           <ul class="list quaility-list">
-            <li>
+            <li class="quaility-list-item">
               <h2 class="title-quaility">Внимание к деталям</h2>
               <p class="quaility-description">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="quaility-list-item">
               <h2 class="title-quaility">Пунктуальность</h2>
               <p class="quaility-description">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="quaility-list-item">
               <h2 class="title-quaility">Планирование</h2>
               <p class="quaility-description">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="quaility-list-item">
               <h2 class="title-quaility">Современные технологии</h2>
               <p class="quaility-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -115,32 +115,40 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="list team-list">
             <li class="team-list-item">
-              <img
+              <img class="team-photo"
                 width="270"
                 src="./img/img4.jpg"
                 alt="Фото Игорь Демьяненко"
               />
-              <h3 class="team-name">Игорь Демьяненко</h3>
-              <p class="team-position" lang="en">Product Designer</p>
+              <div class="team-wrapper">
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p class="team-position" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
-              <img width="270" src="./img/img5.jpg" alt="Фото Ольга Репина" />
-              <h3 class="team-name">Ольга Репина</h3>
-              <p class="team-position" lang="en">Frontend Developer</p>
+              <img class="team-photo" width="270" src="./img/img5.jpg" alt="Фото Ольга Репина" />
+              <div class="team-wrapper">
+                <h3 class="team-name">Ольга Репина</h3>
+                <p class="team-position" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
-              <img
+              <img class="team-photo"
                 width="270"
                 src="./img/img6.jpg"
                 alt="Фото Николай Тарасов"
               />
-              <h3 class="team-name">Николай Тарасов</h3>
-              <p class="team-position" lang="en">Marketing</p>
+              <div class="team-wrapper">
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p class="team-position" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
-              <img width="270" src="./img/img7.jpg" alt="Фото Михаил Ермаков" />
-              <h3 class="team-name">Михаил Ермаков</h3>
-              <p class="team-position" lang="en">UI Designer</p>
+              <img class="team-photo" width="270" src="./img/img7.jpg" alt="Фото Михаил Ермаков" />
+              <div class="team-wrapper">
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p class="team-position" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
