--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="./index.html">Студия</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="./portfolio.html">Портфолио</a>
+              <a class="nav-link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="">Контакты</a>
@@ -49,7 +49,6 @@
         </ul>
       </div>
     </header>
-
     <main>
       <section class="section">
         <div class="container">
@@ -66,94 +65,112 @@
           <!--Проекты-->
           <ul class="list project-list">
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio1.jpg"
                 alt="Технокряк"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-category">Веб-сайт</p>
+            </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio2.jpg"
                 alt="Постер New Orlean vs Golden Star"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-category">Дизайн</p>
+              </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio3.jpg"
                 alt="Ресторан Seafood"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-category">Приложение</p>
+            </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio4.jpg"
                 alt="Проект Prime"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Проект Prime</h2>
               <p class="portfolio-category">Маркетинг</p>
+              </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio5.jpg"
                 alt="Проект Boxes"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Проект Boxes</h2>
               <p class="portfolio-category">Приложение</p>
+            </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio6.jpg"
                 alt="Inspiration has no Borders"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-category">Веб-сайт</p>
+              </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio7.jpg"
                 alt="Издание Limited Edition"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Издание Limited Edition</h2>
               <p class="portfolio-category">Дизайн</p>
+            </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio8.jpg"
                 alt="Проект LAB"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Проект LAB</h2>
               <p class="portfolio-category">Маркетинг</p>
+            </div>
             </li>
             <li class="project-item">
-              <img
+              <img class="project-photo"
                 width="370"
                 height="294"
                 src="./img/portfolio9.jpg"
                 alt="Growing Business"
               />
+              <div class="portfolio-wrapper">
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-category">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
